--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <title>Foot and Ball Academy</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/uikit.min.css" />
-  <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-pO2XEMGVpjG+V1U++9p/YqDqkRW5j4r5fTz+6LUvn6OLN8CJ5EZ02JsqfZ8kqSjpF3aKyMogRbqKOa0zKx1qPQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="css/style.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -76,9 +75,22 @@
       justify-content: center;
       text-align: center;
     }
+
+    /* NEW CSS to stretch Facebook feed to match column heights */
+    .fb-container,
+    .fb-container>.fb-page {
+      flex: 1 1 auto;
+      min-height: 100%;
+      width: 100% !important;
+    }
+
+    .fb-page iframe {
+      height: 100% !important;
+      width: 100% !important;
+      min-height: 100%;
+    }
   </style>
 </head>
-
 
 <body>
   <!-- Facebook SDK -->
@@ -92,9 +104,9 @@
   <!-- Navbar Section End -->
 
   <main class="main-section container">
-    <div class="row">
+    <div class="row d-flex align-items-stretch">
       <!-- Our Mission -->
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-3 col-md-6 d-flex">
         <div class="section-card text-center d-flex flex-column justify-content-center">
           <h3>Our Mission</h3>
           <p>We are an educational establishment focused on long-term individual player development.</p>
@@ -105,14 +117,13 @@
       </div>
 
       <!-- Facebook Feed -->
-      <div class="col-lg-6 col-md-12">
-        <div class="fb-container text-center">
+      <div class="col-lg-6 col-md-12 d-flex">
+        <div class="fb-container text-center flex-fill">
           <h3>Latest from our Facebook</h3>
           <div class="fb-page"
             data-href="https://www.facebook.com/footandball.academy"
             data-tabs="timeline"
-            data-width="500"
-            data-height="400"
+            data-width="100%"
             data-small-header="true"
             data-adapt-container-width="true"
             data-hide-cover="true"
@@ -125,7 +136,7 @@
       </div>
 
       <!-- Meet Our Founder -->
-      <div class="col-lg-3 col-md-6">
+      <div class="col-lg-3 col-md-6 d-flex">
         <div class="section-card text-center d-flex flex-column align-items-center">
           <h3>Meet Our Founder</h3>
           <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education
@@ -153,20 +164,19 @@
     </div>
   </section>
 
-<!-- Get Started Section Start -->
-<section id="get-started" style="background-color: #4274AD; color: white; padding: 3rem 0; text-align: center; background-image: none !important;">
-  <div class="container">
-    <h3 style="font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">Football is the World Game.</h3>
-    <p style="font-size: 1.8rem;">Foot and Ball Academy is proud to be a part of that.</p>
-  </div>
-</section>
-<!-- Get Started Section End -->
-
+  <!-- Get Started Section Start -->
+  <section id="get-started" style="background-color: #4274AD; color: white; padding: 3rem 0; text-align: center; background-image: none !important;">
+    <div class="container">
+      <h3 style="font-size: 3rem; font-weight: bold; margin-bottom: 1rem;">Football is the World Game.</h3>
+      <p style="font-size: 1.8rem;">Foot and Ball Academy is proud to be a part of that.</p>
+    </div>
+  </section>
+  <!-- Get Started Section End -->
 
   <!-- Footer Section Start -->
-<footer>
-  <div id="foot-placeholder"></div>
-</footer>
+  <footer style="background-color: #000; color: white; text-align: center; padding: 1rem 0;">
+    <div id="foot-placeholder"></div>
+  </footer>
   <!-- Footer Section End -->
 
   <!-- JS Scripts -->
