--- a/index.html
+++ b/index.html
@@ -2,23 +2,31 @@
 <html lang="en">
 
 <head>
+  <!-- Meta and title -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foot and Ball Academy</title>
+
+  <!-- Stylesheets: Bootstrap, UIKit, and local main.css -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/uikit.min.css" />
   <link rel="stylesheet" href="css/main.css" />
+
+  <!-- Inline styles for layout and specific components -->
   <style>
+    /* Body base styles */
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
       background-color: #f4f4f4;
     }
 
+    /* Main container padding */
     .main-section {
       padding: 50px 15px;
     }
 
+    /* Card style for content boxes */
     .section-card {
       background-color: #ffffff;
       padding: 20px;
@@ -28,10 +36,12 @@
       height: 100%;
     }
 
+    /* Register button margin */
     .btn-register {
       margin-top: 15px;
     }
 
+    /* Facebook container and map section layout */
     .fb-container,
     #map-section {
       margin-top: 30px;
@@ -40,6 +50,7 @@
       height: 100%;
     }
 
+    /* Facebook page plugin sizing */
     .fb-page {
       flex-grow: 1;
       min-height: 400px;
@@ -47,6 +58,7 @@
       width: 100% !important;
     }
 
+    /* Iframe base styling */
     iframe {
       width: 100% !important;
       max-width: 100%;
@@ -54,26 +66,30 @@
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
-    /* Target only the map iframe inside #map-section */
+    /* Specifically set Google map iframe height */
     #map-section iframe {
       height: 500px !important;
     }
 
+    /* Margins for map section */
     #map-section {
       margin-top: 30px;
       margin-bottom: 50px;
     }
 
+    /* Center text inside map section headings and paragraphs */
     #map-section h3,
     #map-section p {
       text-align: center;
     }
 
+    /* Additional styling for map iframe */
     #map-section iframe {
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
+    /* Center text and flex alignment for section cards */
     .section-card.text-center {
       align-items: center;
       justify-content: center;
@@ -84,19 +100,19 @@
 </head>
 
 <body>
-  <!-- Facebook SDK -->
+  <!-- Facebook SDK root for Facebook feed plugin -->
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous"
     src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"
     nonce="FBSDK"></script>
 
-  <!-- Navbar Section Start -->
+  <!-- Navbar placeholder - loaded dynamically via jQuery -->
   <div id="nav-placeholder"></div>
-  <!-- Navbar Section End -->
 
+  <!-- Main content section container -->
   <main class="main-section container">
     <div class="row d-flex align-items-stretch">
-      <!-- Our Mission -->
+      <!-- Left Column: Our Mission Card -->
       <div class="col-lg-3 col-md-6 d-flex">
         <div class="section-card text-center d-flex flex-column justify-content-center">
           <h3>Our Mission</h3>
@@ -108,7 +124,7 @@
         </div>
       </div>
 
-      <!-- Facebook Feed -->
+      <!-- Middle Column: Facebook Feed -->
       <div class="col-lg-6 col-md-12 d-flex">
         <div class="fb-container text-center flex-fill d-flex flex-column">
           <h3>Latest from our Facebook</h3>
@@ -128,7 +144,7 @@
         </div>
       </div>
 
-      <!-- Meet Our Founder -->
+      <!-- Right Column: Meet Our Founder Card -->
       <div class="col-lg-3 col-md-6 d-flex">
         <div class="section-card text-center d-flex flex-column align-items-center">
           <h3>Meet Our Founder</h3>
@@ -144,11 +160,13 @@
     </div>
   </main>
 
+  <!-- Map Section showing location -->
   <section id="map-section" class="container my-5">
     <h3 class="text-center">Find Us</h3>
     <p class="text-center">McQuade Park<br />Entry off Tebbutt Street, Windsor, NSW 2756</p>
     <div class="row justify-content-center">
       <div class="col-12 col-md-10 col-lg-8">
+        <!-- Embedded Google Map iframe -->
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
           width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
@@ -157,27 +175,27 @@
     </div>
   </section>
 
-<!-- Get Started Section Start -->
-<section id="get-started" style="background-color: #4274AD; color: white; padding: 3rem 0; text-align: center; background-image: none !important;">
-  <div class="container">
-    <h3 style="font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem;">Football is the World Game.</h3>
-    <p style="font-size: 1.25rem;">Foot and Ball Academy is proud to be a part of that.</p>
-  </div>
-</section>
-<!-- Get Started Section End -->
+  <!-- Get Started Section with call to action -->
+  <section id="get-started" style="background-color: #4274AD; color: white; padding: 3rem 0; text-align: center; background-image: none !important;">
+    <div class="container">
+      <h3 style="font-size: 2.5rem; font-weight: bold; margin-bottom: 1rem;">Football is the World Game.</h3>
+      <p style="font-size: 1.25rem;">Foot and Ball Academy is proud to be a part of that.</p>
+    </div>
+  </section>
 
-  <!-- Footer Section Start -->
+  <!-- Footer Section - dynamically loaded -->
   <footer style="background-color: #000; color: white; text-align: center; padding: 1rem 0;">
     <div id="foot-placeholder"></div>
   </footer>
-  <!-- Footer Section End -->
 
-  <!-- JS Scripts -->
+  <!-- JS Script includes: jQuery, Popper, Bootstrap, UIKit -->
   <script src="js/jquery-3.6.4.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/uikit.min.js"></script>
   <script src="js/uikit-icons.min.js"></script>
+
+  <!-- Load navbar and footer HTML dynamically -->
   <script>
     $(document).ready(function () {
       $("#nav-placeholder").load("navbar.html");
