--- a/index.html
+++ b/index.html
@@ -1,45 +1,157 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Foot and Ball Academy</title>
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/css/uikit.min.css" />
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.17.12/dist/css/uikit.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <link rel="stylesheet" href="css/main.css" />
+
   <style>
+    /* Body padding to clear fixed navbar + breathing room */
     body {
       background-color: #f4f4f4;
-      padding-top: 70px;
+      padding-top: 80px; /* Increased for more gap on desktop & tablet */
     }
+
+    /* Fixed navbar styles with z-index */
+    .navbar {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1030;
+    }
+
+    /* Section card styling */
     .section-card {
-      background: white;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      background-color: white;
+      border-radius: 10px;
       padding: 20px;
-      border-radius: 12px;
-      margin-bottom: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      height: 100%;
+      display: flex;
+      flex-direction: column;
     }
-    .fb-page,
-    .fb-page > span,
-    .fb-page iframe {
+
+    /* Normalize h3 size inside cards */
+    .section-card h3 {
+      font-size: 1.5rem; /* ~24px */
+      margin-bottom: 1rem;
+      font-weight: 600;
+    }
+
+    /* Map iframe styling */
+    #map-section iframe {
+      width: 100%;
+      height: 100%;
+      min-height: 450px;
+      border: none;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Register button margin */
+    .btn-register {
+      margin-top: 15px;
+      align-self: center;
+    }
+
+    /* Footer styling */
+    footer {
+      background-color: #4274AD;
+      color: white;
+      text-align: center;
+      padding: 1.5rem 0;
+      font-weight: 600;
+      font-size: 1.25rem;
+      margin: 0;
+    }
+
+    /* Make Facebook feed fill its container and scale nicely */
+    .fb-page {
       width: 100% !important;
+      flex-grow: 1;
+      min-height: 440px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
     }
-    @media (max-width: 768px) {
-      .col-12:first-child {
-        margin-top: 10px;
+
+    /* YouTube iframe fill */
+    .ratio iframe {
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* === Responsive margins and layout fixes === */
+
+    /* MOBILE (<576px) */
+    @media (max-width: 575.98px) {
+      .our-mission-wrapper {
+        margin-top: 1rem !important; /* breathing so toggler clickable */
+      }
+
+      .find-us-wrapper {
+        margin-top: 1.5rem !important;
+      }
+
+      .meet-founder-wrapper {
+        margin-top: 1.5rem !important;
+      }
+
+      .feed-block {
+        margin-bottom: 1.5rem !important;
+      }
+    }
+
+    /* TABLET (≥576px and <992px) */
+    @media (min-width: 576px) and (max-width: 991.98px) {
+      .our-mission-wrapper {
+        margin-top: 1.5rem !important; /* space below navbar only for Our Mission */
+      }
+
+      /* Find Us stacked below Our Mission, no margin-top */
+      .find-us-wrapper {
+        margin-top: 0 !important;
+      }
+
+      /* Meet Founder stacked under Find Us, margin-top */
+      .meet-founder-wrapper {
+        margin-top: 1.5rem !important;
+      }
+
+      .feed-block {
+        margin-bottom: 0 !important;
+      }
+    }
+
+    /* DESKTOP (≥992px) */
+    @media (min-width: 992px) {
+      .our-mission-wrapper,
+      .meet-founder-wrapper,
+      .find-us-wrapper,
+      .feed-block {
+        margin-top: 0 !important;
+        margin-bottom: 0 !important;
       }
     }
   </style>
 </head>
+
 <body>
-  <!-- Navbar -->
+  <!-- Navbar placeholder -->
   <div id="nav-placeholder"></div>
 
-  <main class="container mt-3">
-    <div class="row g-3">
-      <!-- Our Mission -->
-      <div class="col-lg-4 col-md-6 col-12">
-        <div class="section-card">
+  <main class="container mt-4">
+    <!-- Top section with three columns -->
+    <div class="row g-4 mb-5">
+      <div class="col-12 col-md-6 col-lg-3 our-mission-wrapper">
+        <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
           <h3>Our Mission</h3>
           <p>We are an educational establishment focused on long-term individual player development.</p>
           <p>Think of us like a “primary school” for football, i.e., six y/o to 12 y/o.</p>
@@ -48,28 +160,22 @@
         </div>
       </div>
 
-      <!-- Facebook Feed -->
-      <div class="col-lg-4 col-md-6 col-12">
-        <div class="section-card">
-          <h3>Follow Us</h3>
-          <div class="fb-page" 
-               data-href="https://www.facebook.com/facebook" 
-               data-tabs="timeline" 
-               data-height="400" 
-               data-small-header="false" 
-               data-adapt-container-width="true" 
-               data-hide-cover="false" 
-               data-show-facepile="true">
-            <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore">
-              <a href="https://www.facebook.com/facebook">Facebook</a>
-            </blockquote>
+      <div class="col-12 col-md-6 col-lg-6 d-flex flex-column justify-content-center find-us-wrapper">
+        <div class="section-card text-center h-100 mb-4 mb-md-3 mb-lg-0">
+          <h3 class="mb-3">Find Us</h3>
+          <p class="mb-4">McQuade Park<br />Entry off Tebbutt, Moses, or George Street<br />Windsor, NSW 2756</p>
+          <div style="flex-grow:1;">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d994.0376535072251!2d150.81278093372703!3d-33.60963318454133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b0d6289c228e761%3A0xf017d68f9f15730!2sMcQuade%20Park!5e1!3m2!1sen!2sau!4v1754127213533!5m2!1sen!2sau"
+              allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+              style="width:100%; height:100%; min-height:450px; border-radius:8px; box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+            </iframe>
           </div>
         </div>
       </div>
 
-      <!-- Meet Our Founder -->
-      <div class="col-lg-4 col-md-6 col-12">
-        <div class="section-card text-center d-flex flex-column align-items-center">
+      <div class="col-12 col-md-6 col-lg-3 meet-founder-wrapper">
+        <div class="section-card text-center h-100 mb-4 mb-md-0">
           <h3>Meet Our Founder</h3>
           <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education from around the world.</p>
           <p>He always ensures our philosophies, curriculums, and session designs have global citations.</p>
@@ -78,44 +184,44 @@
           </a>
         </div>
       </div>
+    </div>
 
-      <!-- YouTube Embed -->
-      <div class="col-lg-6 col-md-6 col-12">
-        <div class="section-card">
-          <h3>Watch Us</h3>
-          <div class="ratio ratio-16x9">
-            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+    <!-- Bottom section with Facebook and YouTube feeds -->
+    <div class="row g-4 mb-5">
+      <div class="col-12 col-md-6">
+        <div class="section-card text-center h-100 mb-4 mb-md-0 feed-block d-flex flex-column">
+          <h3>Latest from our YouTube</h3>
+          <div class="ratio ratio-16x9 flex-grow-1">
+            <iframe src="https://www.youtube.com/embed?listType=user_uploads&list=FootandBall_Academy"
+              title="YouTube video feed" allowfullscreen></iframe>
           </div>
         </div>
       </div>
-
-      <!-- Find Us -->
-      <div class="col-lg-6 col-md-6 col-12">
-        <div class="section-card">
-          <h3>Find Us</h3>
-          <iframe
-            width="100%"
-            height="250"
-            frameborder="0"
-            scrolling="no"
-            marginheight="0"
-            marginwidth="0"
-            src="https://maps.google.com/maps?q=Sydney&t=&z=13&ie=UTF8&iwloc=&output=embed"
-          ></iframe>
+      <div class="col-12 col-md-6 d-flex flex-column">
+        <div class="section-card text-center h-100 mb-4 mb-md-0 feed-block d-flex flex-column">
+          <h3>Latest from our Facebook</h3>
+          <div class="fb-page flex-grow-1" data-href="https://www.facebook.com/footandball.academy" data-tabs="timeline"
+            data-width="" data-height="440" data-small-header="true" data-adapt-container-width="true"
+            data-hide-cover="true" data-show-facepile="false">
+            <blockquote cite="https://www.facebook.com/footandball.academy" class="fb-xfbml-parse-ignore">
+              <a href="https://www.facebook.com/footandball.academy">Foot and Ball Academy Facebook</a>
+            </blockquote>
+          </div>
         </div>
       </div>
     </div>
   </main>
 
-  <!-- Footer -->
+  <!-- Footer placeholder -->
   <div id="foot-placeholder"></div>
 
-  <!-- Scripts -->
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0"></script>
+  <script async defer crossorigin="anonymous"
+    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="FBSDK"></script>
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.23/dist/js/uikit.min.js"></script>
+  <script src="js/uikit.min.js"></script>
+  <script src="js/uikit-icons.min.js"></script>
   <script>
     $(function () {
       $("#nav-placeholder").load("navbar.html");
@@ -123,4 +229,5 @@
     });
   </script>
 </body>
+
 </html>
